[gd_scene load_steps=9 format=3 uid="uid://krhoxrvynsul"]

[ext_resource type="PackedScene" uid="uid://bp5cnuyqfyejc" path="res://scenes/components/melee_ai_component.tscn" id="1_l188l"]
[ext_resource type="Script" uid="uid://bsa6f4jau1mpy" path="res://scripts/enemies/melee_enemy.gd" id="1_ru65g"]
[ext_resource type="PackedScene" uid="uid://bf5jlbp1hfdlv" path="res://scenes/enemies/enemy_attack_area.tscn" id="3_ghbxi"]
[ext_resource type="PackedScene" uid="uid://dl2tonnk0tfq8" path="res://scenes/components/health_component.tscn" id="4_c1gin"]
[ext_resource type="PackedScene" uid="uid://bxcap5fdjer81" path="res://scenes/enemies/enemy_attacked_area.tscn" id="5_p6yma"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ykcao"]
size = Vector2(96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghbxi"]
size = Vector2(96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6yma"]
size = Vector2(96, 96)

[node name="MeleeEnemy" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_ru65g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_ykcao")

[node name="MeleeAIComponent" parent="." instance=ExtResource("1_l188l")]

[node name="EnemyAttackArea" parent="." instance=ExtResource("3_ghbxi")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAttackArea"]
shape = SubResource("RectangleShape2D_ghbxi")

[node name="EnemyAttackedArea" parent="." instance=ExtResource("5_p6yma")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAttackedArea"]
shape = SubResource("RectangleShape2D_p6yma")

[node name="HealthComponent" parent="." instance=ExtResource("4_c1gin")]
health = 2

[connection signal="health_less_than_zero" from="HealthComponent" to="." method="_on_health_less_than_zero"]
